--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,159 +74,332 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
-}
 
-@media (prefers-color-scheme: dark) {
-  /*
-   * Dark Colors
-   * -------------------------------------------
-   */
-
-  body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
-
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
-    --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
-
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
-
-    --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47,223,117;
-    --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0,0,0;
-    --ion-color-success-shade: #29c467;
-    --ion-color-success-tint: #44e283;
-
-    --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255,213,52;
-    --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0,0,0;
-    --ion-color-warning-shade: #e0bb2e;
-    --ion-color-warning-tint: #ffd948;
-
-    --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255,73,97;
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255,255,255;
-    --ion-color-danger-shade: #e04055;
-    --ion-color-danger-tint: #ff5b71;
-
-    --ion-color-dark: #f4f5f8;
-    --ion-color-dark-rgb: 244,245,248;
-    --ion-color-dark-contrast: #000000;
-    --ion-color-dark-contrast-rgb: 0,0,0;
-    --ion-color-dark-shade: #d7d8da;
-    --ion-color-dark-tint: #f5f6f9;
-
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152,154,162;
-    --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: 0,0,0;
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
-
-    --ion-color-light: #222428;
-    --ion-color-light-rgb: 34,36,40;
-    --ion-color-light-contrast: #ffffff;
-    --ion-color-light-contrast-rgb: 255,255,255;
-    --ion-color-light-shade: #1e2023;
-    --ion-color-light-tint: #383a3e;
+    /** grass **/
+    --ion-color-grass: #9bcc50;
+    --ion-color-grass-rgb: 155,204,80;
+    --ion-color-grass-contrast: #000000;
+    --ion-color-grass-contrast-rgb: 0,0,0;
+    --ion-color-grass-shade: #88b446;
+    --ion-color-grass-tint: #a5d162;
+  
+  /** psychic **/
+  --ion-color-psychic: #f973d3;
+  --ion-color-psychic-rgb: 249,115,211;
+  --ion-color-psychic-contrast: #000000;
+  --ion-color-psychic-contrast-rgb: 0,0,0;
+  --ion-color-psychic-shade: #db65ba;
+  --ion-color-psychic-tint: #fa81d7;
+  
+    /** fairy **/
+    --ion-color-fairy: #fdb9e9;
+    --ion-color-fairy-rgb: 253,185,233;
+    --ion-color-fairy-contrast: #000000;
+    --ion-color-fairy-contrast-rgb: 0,0,0;
+    --ion-color-fairy-shade: #dfa3cd;
+    --ion-color-fairy-tint: #fdc0eb;
+  
+      /** fire **/
+    --ion-color-fire: #fd7d24;
+    --ion-color-fire-rgb: 253,125,36;
+    --ion-color-fire-contrast: #000000;
+    --ion-color-fire-contrast-rgb: 0,0,0;
+    --ion-color-fire-shade: #df6e20;
+    --ion-color-fire-tint: #fd8a3a;
+  
+        /** poison **/
+    --ion-color-poison: #b97fc9;
+    --ion-color-poison-rgb: 185,127,201;
+    --ion-color-poison-contrast: #000000;
+    --ion-color-poison-contrast-rgb: 0,0,0;
+    --ion-color-poison-shade: #a370b1;
+    --ion-color-poison-tint: #c08cce;
+  
+        /** water **/
+    --ion-color-water: #4592c4;
+    --ion-color-water-rgb: 69,146,196;
+    --ion-color-water-contrast: #000000;
+    --ion-color-water-contrast-rgb: 0,0,0;
+    --ion-color-water-shade: #3d80ac;
+    --ion-color-water-tint: #589dca;
+  
+        /** bug **/
+    --ion-color-bug: #729f3f;
+    --ion-color-bug-rgb: 114,159,63;
+    --ion-color-bug-contrast: #000000;
+    --ion-color-bug-contrast-rgb: 0,0,0;
+    --ion-color-bug-shade: #648c37;
+    --ion-color-bug-tint: #80a952;
+  
+        /** ghost **/
+    --ion-color-ghost: #7b62a3;
+    --ion-color-ghost-rgb: 123,98,163;
+    --ion-color-ghost-contrast: #ffffff;
+    --ion-color-ghost-contrast-rgb: 255,255,255;
+    --ion-color-ghost-shade: #6c568f;
+    --ion-color-ghost-tint: #8872ac;
+  
+  
+        /** ground **/
+    --ion-color-ground:linear-gradient(180deg, #f7de3f 50%, #ab9842 50%);
+    --ion-color-ground-rgb: 171,152,66;
+    --ion-color-ground-contrast: #000000;
+    --ion-color-ground-contrast-rgb: 0,0,0;
+    --ion-color-ground-shade: #96863a;
+    --ion-color-ground-tint: #b3a255;
+  
+        /** normal **/
+    --ion-color-normal: #a4acaf;
+    --ion-color-normal-rgb: 164,172,175;
+    --ion-color-normal-contrast: #000000;
+    --ion-color-normal-contrast-rgb: 0,0,0;
+    --ion-color-normal-shade: #90979a;
+    --ion-color-normal-tint: #adb4b7;
+  
+          /** steel **/
+    --ion-color-steel: #9eb7b8;
+    --ion-color-steel-rgb: 158,183,184;
+    --ion-color-steel-contrast: #000000;
+    --ion-color-steel-contrast-rgb: 0,0,0;
+    --ion-color-steel-shade: #8ba1a2;
+    --ion-color-steel-tint: #a8bebf;
+  
+          /** dragon **/
+      --ion-color-dragon:linear-gradient(180deg, #53a4cf 50%, #f16e57 50%);
+      --ion-color-dragon-rgb: 83,164,207;
+      --ion-color-dragon-contrast: #000000;
+      --ion-color-dragon-contrast-rgb: 0,0,0;
+      --ion-color-dragon-shade: #4990b6;
+      --ion-color-dragon-tint: #64add4;
+  
+          /** darkp **/
+      --ion-color-darkp: #707070;
+      --ion-color-darkp-rgb: 112,112,112;
+      --ion-color-darkp-contrast: #ffffff;
+      --ion-color-darkp-contrast-rgb: 255,255,255;
+      --ion-color-darkp-shade: #636363;
+      --ion-color-darkp-tint: #7e7e7e;
+  
+          /** electric **/
+      --ion-color-electric: #eed535;
+      --ion-color-electric-rgb: 238,213,53;
+      --ion-color-electric-contrast: #000000;
+      --ion-color-electric-contrast-rgb: 0,0,0;
+      --ion-color-electric-shade: #d1bb2f;
+      --ion-color-electric-tint: #f0d949;
+  
+          /** fighting **/
+      --ion-color-fighting: #d56723;
+      --ion-color-fighting-rgb: 213,103,35;
+      --ion-color-fighting-contrast: #000000;
+      --ion-color-fighting-contrast-rgb: 0,0,0;
+      --ion-color-fighting-shade: #bb5b1f;
+      --ion-color-fighting-tint: #d97639;
+  
+          /** flying **/
+      --ion-color-flying:linear-gradient(180deg, #3dc7ef 50%, #bdb9b8 50%);
+      --ion-color-flying-rgb: 61,199,239;
+      --ion-color-flying-contrast: #000000;
+      --ion-color-flying-contrast-rgb: 0,0,0;
+      --ion-color-flying-shade: #36afd2;
+      --ion-color-flying-tint: #50cdf1;
+  
+          /** ice **/
+      --ion-color-ice: #51c4e7;
+      --ion-color-ice-rgb: 81,196,231;
+      --ion-color-ice-contrast: #000000;
+      --ion-color-ice-contrast-rgb: 0,0,0;
+      --ion-color-ice-shade: #47accb;
+      --ion-color-ice-tint: #62cae9;
+  
+          /** rock **/
+      --ion-color-rock: #a38c21;
+      --ion-color-rock-rgb: 163,140,33;
+      --ion-color-rock-contrast: #000000;
+      --ion-color-rock-contrast-rgb: 0,0,0;
+      --ion-color-rock-shade: #8f7b1d;
+      --ion-color-rock-tint: #ac9837;
+  
+          /** redmain **/
+      --ion-color-redmain: #e3350d;
+      --ion-color-redmain-rgb: 227,53,13;
+      --ion-color-redmain-contrast: #ffffff;
+      --ion-color-redmain-contrast-rgb: 255,255,255;
+      --ion-color-redmain-shade: #c82f0b;
+      --ion-color-redmain-tint: #e64925;
   }
-
-  /*
-   * iOS Dark Theme
-   * -------------------------------------------
-   */
-
-  .ios body {
-    --ion-background-color: #000000;
-    --ion-background-color-rgb: 0,0,0;
-
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
-
-    --ion-color-step-50: #0d0d0d;
-    --ion-color-step-100: #1a1a1a;
-    --ion-color-step-150: #262626;
-    --ion-color-step-200: #333333;
-    --ion-color-step-250: #404040;
-    --ion-color-step-300: #4d4d4d;
-    --ion-color-step-350: #595959;
-    --ion-color-step-400: #666666;
-    --ion-color-step-450: #737373;
-    --ion-color-step-500: #808080;
-    --ion-color-step-550: #8c8c8c;
-    --ion-color-step-600: #999999;
-    --ion-color-step-650: #a6a6a6;
-    --ion-color-step-700: #b3b3b3;
-    --ion-color-step-750: #bfbfbf;
-    --ion-color-step-800: #cccccc;
-    --ion-color-step-850: #d9d9d9;
-    --ion-color-step-900: #e6e6e6;
-    --ion-color-step-950: #f2f2f2;
-
-    --ion-toolbar-background: #0d0d0d;
-
-    --ion-item-background: #000000;
-
-    --ion-card-background: #1c1c1d;
+  
+  
+  .ion-color-redmain {
+    --ion-color-base: var(--ion-color-redmain);
+    --ion-color-base-rgb: var(--ion-color-redmain-rgb);
+    --ion-color-contrast: var(--ion-color-redmain-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-redmain-contrast-rgb);
+    --ion-color-shade: var(--ion-color-redmain-shade);
+    --ion-color-tint: var(--ion-color-redmain-tint);
   }
-
-
-  /*
-   * Material Design Dark Theme
-   * -------------------------------------------
-   */
-
-  .md body {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
-
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
-
-    --ion-border-color: #222222;
-
-    --ion-color-step-50: #1e1e1e;
-    --ion-color-step-100: #2a2a2a;
-    --ion-color-step-150: #363636;
-    --ion-color-step-200: #414141;
-    --ion-color-step-250: #4d4d4d;
-    --ion-color-step-300: #595959;
-    --ion-color-step-350: #656565;
-    --ion-color-step-400: #717171;
-    --ion-color-step-450: #7d7d7d;
-    --ion-color-step-500: #898989;
-    --ion-color-step-550: #949494;
-    --ion-color-step-600: #a0a0a0;
-    --ion-color-step-650: #acacac;
-    --ion-color-step-700: #b8b8b8;
-    --ion-color-step-750: #c4c4c4;
-    --ion-color-step-800: #d0d0d0;
-    --ion-color-step-850: #dbdbdb;
-    --ion-color-step-900: #e7e7e7;
-    --ion-color-step-950: #f3f3f3;
-
-    --ion-item-background: #1e1e1e;
-
-    --ion-toolbar-background: #1f1f1f;
-
-    --ion-tab-bar-background: #1f1f1f;
-
-    --ion-card-background: #1e1e1e;
+  
+  .ion-color-grass {
+    --ion-color-base: var(--ion-color-grass);
+    --ion-color-base-rgb: var(--ion-color-grass-rgb);
+    --ion-color-contrast: var(--ion-color-grass-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-grass-contrast-rgb);
+    --ion-color-shade: var(--ion-color-grass-shade);
+    --ion-color-tint: var(--ion-color-grass-tint);
   }
-}
+  
+  
+  .ion-color-psychic {
+    --ion-color-base: var(--ion-color-psychic);
+    --ion-color-base-rgb: var(--ion-color-psychic-rgb);
+    --ion-color-contrast: var(--ion-color-psychic-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-psychic-contrast-rgb);
+    --ion-color-shade: var(--ion-color-psychic-shade);
+    --ion-color-tint: var(--ion-color-psychic-tint);
+  }
+  
+  
+  
+  .ion-color-fairy {
+    --ion-color-base: var(--ion-color-fairy);
+    --ion-color-base-rgb: var(--ion-color-fairy-rgb);
+    --ion-color-contrast: var(--ion-color-fairy-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-fairy-contrast-rgb);
+    --ion-color-shade: var(--ion-color-fairy-shade);
+    --ion-color-tint: var(--ion-color-fairy-tint);
+  }
+  
+  .ion-color-fire {
+    --ion-color-base: var(--ion-color-fire);
+    --ion-color-base-rgb: var(--ion-color-fire-rgb);
+    --ion-color-contrast: var(--ion-color-fire-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-fire-contrast-rgb);
+    --ion-color-shade: var(--ion-color-fire-shade);
+    --ion-color-tint: var(--ion-color-fire-tint);
+  }
+  
+  .ion-color-poison {
+    --ion-color-base: var(--ion-color-poison);
+    --ion-color-base-rgb: var(--ion-color-poison-rgb);
+    --ion-color-contrast: var(--ion-color-poison-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-poison-contrast-rgb);
+    --ion-color-shade: var(--ion-color-poison-shade);
+    --ion-color-tint: var(--ion-color-poison-tint);
+  }
+  
+  .ion-color-water {
+    --ion-color-base: var(--ion-color-water);
+    --ion-color-base-rgb: var(--ion-color-water-rgb);
+    --ion-color-contrast: var(--ion-color-water-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-water-contrast-rgb);
+    --ion-color-shade: var(--ion-color-water-shade);
+    --ion-color-tint: var(--ion-color-water-tint);
+  }
+  
+  .ion-color-bug {
+    --ion-color-base: var(--ion-color-bug);
+    --ion-color-base-rgb: var(--ion-color-bug-rgb);
+    --ion-color-contrast: var(--ion-color-bug-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-bug-contrast-rgb);
+    --ion-color-shade: var(--ion-color-bug-shade);
+    --ion-color-tint: var(--ion-color-bug-tint);
+  }
+  
+  .ion-color-ghost {
+    --ion-color-base: var(--ion-color-ghost);
+    --ion-color-base-rgb: var(--ion-color-ghost-rgb);
+    --ion-color-contrast: var(--ion-color-ghost-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-ghost-contrast-rgb);
+    --ion-color-shade: var(--ion-color-ghost-shade);
+    --ion-color-tint: var(--ion-color-ghost-tint);
+  }
+  
+  .ion-color-ground {
+    --ion-color-base: var(--ion-color-ground);
+    --ion-color-base-rgb: var(--ion-color-ground-rgb);
+    --ion-color-contrast: var(--ion-color-ground-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-ground-contrast-rgb);
+    --ion-color-shade: var(--ion-color-ground-shade);
+    --ion-color-tint: var(--ion-color-ground-tint);
+  }
+  
+  .ion-color-normal {
+    --ion-color-base: var(--ion-color-normal);
+    --ion-color-base-rgb: var(--ion-color-normal-rgb);
+    --ion-color-contrast: var(--ion-color-normal-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-normal-contrast-rgb);
+    --ion-color-shade: var(--ion-color-normal-shade);
+    --ion-color-tint: var(--ion-color-normal-tint);
+  }
+  
+  .ion-color-steel {
+    --ion-color-base: var(--ion-color-steel);
+    --ion-color-base-rgb: var(--ion-color-steel-rgb);
+    --ion-color-contrast: var(--ion-color-steel-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-steel-contrast-rgb);
+    --ion-color-shade: var(--ion-color-steel-shade);
+    --ion-color-tint: var(--ion-color-steel-tint);
+  }
+  
+  .ion-color-dragon {
+    --ion-color-base: var(--ion-color-dragon);
+    --ion-color-base-rgb: var(--ion-color-dragon-rgb);
+    --ion-color-contrast: var(--ion-color-dragon-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-dragon-contrast-rgb);
+    --ion-color-shade: var(--ion-color-dragon-shade);
+    --ion-color-tint: var(--ion-color-dragon-tint);
+  }
+  
+  .ion-color-darkp {
+    --ion-color-base: var(--ion-color-darkp);
+    --ion-color-base-rgb: var(--ion-color-darkp-rgb);
+    --ion-color-contrast: var(--ion-color-darkp-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-darkp-contrast-rgb);
+    --ion-color-shade: var(--ion-color-darkp-shade);
+    --ion-color-tint: var(--ion-color-darkp-tint);
+  }
+  
+  .ion-color-electric {
+    --ion-color-base: var(--ion-color-electric);
+    --ion-color-base-rgb: var(--ion-color-electric-rgb);
+    --ion-color-contrast: var(--ion-color-electric-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-electric-contrast-rgb);
+    --ion-color-shade: var(--ion-color-electric-shade);
+    --ion-color-tint: var(--ion-color-electric-tint);
+  }
+  
+  .ion-color-fighting {
+    --ion-color-base: var(--ion-color-fighting);
+    --ion-color-base-rgb: var(--ion-color-fighting-rgb);
+    --ion-color-contrast: var(--ion-color-fighting-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-fighting-contrast-rgb);
+    --ion-color-shade: var(--ion-color-fighting-shade);
+    --ion-color-tint: var(--ion-color-fighting-tint);
+  }
+  
+  .ion-color-flying {
+    --ion-color-base: var(--ion-color-flying);
+    --ion-color-base-rgb: var(--ion-color-flying-rgb);
+    --ion-color-contrast: var(--ion-color-flying-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-flying-contrast-rgb);
+    --ion-color-shade: var(--ion-color-flying-shade);
+    --ion-color-tint: var(--ion-color-flying-tint);
+  }
+  
+  .ion-color-ice {
+    --ion-color-base: var(--ion-color-ice);
+    --ion-color-base-rgb: var(--ion-color-ice-rgb);
+    --ion-color-contrast: var(--ion-color-ice-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-ice-contrast-rgb);
+    --ion-color-shade: var(--ion-color-ice-shade);
+    --ion-color-tint: var(--ion-color-ice-tint);
+  }
+  
+  .ion-color-rock {
+    --ion-color-base: var(--ion-color-rock);
+    --ion-color-base-rgb: var(--ion-color-rock-rgb);
+    --ion-color-contrast: var(--ion-color-rock-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-rock-contrast-rgb);
+    --ion-color-shade: var(--ion-color-rock-shade);
+    --ion-color-tint: var(--ion-color-rock-tint);
+  }
